@@ -4,6 +4,8 @@ CHANGES
 Unreleased
 -------------------
 
+- Added access logging to aiohttp.web
+
 - Gunicorn worker for aiohttp.web
 
 - Removed deprecated AsyncGunicornWorker
